<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hp.ashokkumarshrestha.wizard.MainActivity"
    android:background="@color/houseR">

    <RelativeLayout
        android:id="@+id/relayoutHouse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgHouse"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:src="@drawable/ic_g" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnSortingHouse"
            android:layout_toRightOf="@+id/imgHouse"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/houseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="House Name"
                android:textColor="@color/txtWhite"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/houseMatchings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Matching: %"
                android:textColor="@color/txtWhite"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSortingHouse"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/btnTransparent"
            android:gravity="center"
            android:text=">"
            android:textColor="@color/txtWhite"
            android:textSize="20dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnInitHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sorting_house"
        android:background="@color/houseR"
        android:textColor="@color/textWhite"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <RelativeLayout
        android:id="@+id/relayoutWand"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/wandBanner"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgBanner"
                android:src="@drawable/ic_hogwarts"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnSortingWand"
            android:layout_toRightOf="@id/wandBanner"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgWand"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/wand1" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSortingWand"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/btnTransparent"
            android:gravity="center"
            android:text=">"
            android:textColor="@color/txtWhite"
            android:textSize="20dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnInitWand"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sorting_wand"
        android:background="@color/houseR"
        android:textColor="@color/txtWhite"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <RelativeLayout
        android:id="@+id/relayoutPatronus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/imgPatronusLayout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPatronus"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_patronus"
                android:padding="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/patronusName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnSortingPatronus"
            android:layout_toRightOf="@+id/imgPatronusLayout"
            android:gravity="center"
            android:text="Patronus Name"
            android:textColor="@color/txtWhite"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnSortingPatronus"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/btnTransparent"
            android:gravity="center"
            android:text=">"
            android:textColor="@color/txtWhite"
            android:textSize="20dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnInitPatronus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sorting_patronus"
        android:background="@color/houseR"
        android:textColor="@color/txtWhite"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <Button
        android:id="@+id/btnPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textWhite"
        android:text="Privacy Policy"
        android:textAllCaps="false"
        android:textColor="@color/qtitle4" />
</LinearLayout>


